JumpScript/tests/baselines/reference/ambientClassOverloadForFunction.errors.txt
tests/cases/compiler/ambientClassOverloadForFunction.jump(1,15): error TS2300: Duplicate identifier 'foo'.
tests/cases/compiler/ambientClassOverloadForFunction.jump(2,10): error TS2300: Duplicate identifier 'foo'.


==== tests/cases/compiler/ambientClassOverloadForFunction.jump (2 errors) ====
    declare class foo{};
                  ~~~
!!! error TS2300: Duplicate identifier 'foo'.
    function foo() { return null; }
             ~~~
!!! error TS2300: Duplicate identifier 'foo'.
    